@@ -1,0 +1,3 @@
+declare [] as operator (int, int) returning int
+        ^
+9: error: member operator [] must have exactly 1 parameter
