@@ -1,0 +1,3 @@
+explain int operator[](int, int)
+          ^
+11: error: member operator [] must have exactly 1 parameter
