@@ -1,3 +1,1 @@
-explain int operator[](int, int)
-          ^
-11: error: member operator [] must have exactly 1 parameter
+declare [] as member operator (int, int) returning int
