@@ -1,0 +1,1 @@
+cdecl @ @ -xc++20 @ declare [] as operator (int, int) returning int @ 65
