@@ -1,0 +1,1 @@
+cdecl @ @ -xc++20 @ explain int operator[](int, int) @ 65
